--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,10 +20,9 @@
         android:theme="@style/CustomActionBarTheme" >
         <activity
             android:name="tw.com.ischool.oneknow.main.MainActivity"
-            android:icon="@drawable/ic_1know"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" >
-            <intent-filter>
+            <intent-filter android:icon="@drawable/ic_1know" >
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
